Fix CSS for question response text alignment (#39)

--- a/less/styles.less
+++ b/less/styles.less
@@ -206,7 +206,7 @@
     }
 
     .question-feedback-holder {
-        text-align: center;
+        text-align: initial;
 
         &:before {
             display: none;
